# UF-IEEE-Hardware-Open-Team-25-26

./: CMakeLists.txt  README.md  package.xml
action/: Drive.action  FindColor.action
include/Hardware_Team_Robot/: chassis_node.h  ir_node.h
include/Hardware_Team_Robot/Sensors/: GY31.h
include/hardware_team_robot/: auton_routine.h  camera_lift_node.h  camera_mount_node.h  camera_node.h  chassis_node.h  encoder_driver.h  intake_node.h  keypad_servo.h  keypad_servo.hpp  mecanum_odometry.h  navigation_controller.h  odometry.h  tank_odometry.h
include/hardware_team_robot/sensors/: GY31.h  MPU6050.h  UltrasonicDistance.h  VEML7700.h  pca9685_driver.h
launch/: cam_launch.py
src/: auton_routine.cpp  camera_lift_node.cpp  camera_mount_node.cpp  camera_node.cpp  chassis_node.cpp  encoder_driver.cpp  intake_node.cpp  ir_node.cpp  keypad_servo_node.cpp  mecanum_odometry.cpp  navigation_controller.cpp  odometry.cpp  odometry_test.cpp  tank_odometry.cpp
src/Sensors/: GY31.cpp  MPU6050.cpp
src/sensors/: GY31.cpp  MPU6050.cpp  UltrasonicDistance.cpp  VEML7700.cpp  pca9685_driver.cpp
