<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_team_robot</name>
  <version>0.0.1</version>
  <description>ROS 2 Jazzy package for IEEE Robotics parts on Raspberry Pi 4 using pigpio</description>
  
  <maintainer email="davis3lester@gmail.com">Davis Lester</maintainer>
  <maintainer email="palmermarcelo24@gmail.com">Marcelo Palmer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>